--- a/src/views/Header/styles.module.scss
+++ b/src/views/Header/styles.module.scss
@@ -7,12 +7,23 @@ header {
   justify-content: center;
   flex-wrap: nowrap;
   margin-bottom: 16px;
+  min-width: 320px;
+
+  .infoIcon {
+    min-width: 24px;
+    min-height: 24px;
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .headerWrapper {
+  width: 800px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
+  padding: 0 16px;
 }
 
 .headerLogo {
