--- a/src/views/Search/styles.module.scss
+++ b/src/views/Search/styles.module.scss
@@ -7,6 +7,8 @@
 }
 
 form {
+  width: 100%;
+
   fieldset {
     border: none;
 
@@ -14,25 +16,48 @@ form {
       border: 1px solid $gray;
       border-radius: 5px;
       margin: 8px 0;
-      padding: 10px 0px;
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
       align-items: center;
       position: relative;
+      cursor: pointer;
 
       input {
-        width: 100%;
+        cursor: pointer;
         opacity: 0;
+        width: 100%;
+        height: 34px;
       }
 
       label {
+        cursor: pointer;
         position: absolute;
         margin-left: 16px;
       }
 
       &.active {
-        background-color: #163b4d;
+        background-color: $lightBlue;
+      }
+    }
+  }
+
+  .inputTermContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 16px;
+
+    label {
+      margin-bottom: 8px;
+    }
+
+    input {
+      padding: 10px 10px;
+      border: 1px solid $gray;
+      border-radius: 5px;
+
+      &:focus {
+        outline: none;
       }
     }
   }
