--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -13,6 +13,11 @@ body {
   background-color: $black;
 }
 
+h3 {
+  cursor: default;
+  margin: 8px 0;
+}
+
 .container {
   display: flex;
   flex-direction: column;
