--- a/src/views/Header/styles.module.scss
+++ b/src/views/Header/styles.module.scss
@@ -8,7 +8,7 @@ header {
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   min-width: 320px;
 }
 
@@ -61,4 +61,5 @@ header {
   font-weight: 700;
   font-size: 24px;
   margin: 0 20px;
+  cursor: default;
 }
