--- a/src/views/UserProfile/styles.module.scss
+++ b/src/views/UserProfile/styles.module.scss
@@ -16,8 +16,9 @@
 }
 
 .repositoriesContainer {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
+  cursor: pointer;
 
   .repositoryContainer {
     display: flex;
@@ -28,6 +29,19 @@
     .repositoryName {
       display: flex;
       align-items: center;
+
+      .link {
+        color: #ffffff;
+        text-decoration: none;
+      }
+
+      .link:visited {
+        color: #ffffff;
+      }
+
+      .link:hover {
+        text-decoration: underline;
+      }
 
       .icon {
         width: 16px;
